--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/wljin/image/upload/v1605629337/personal%20website/fav_mftz1c.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="George Jingo"
+      content="I am a fullstack web developer with 6 years experience in building well optimized user-centric and interactive solutions leveraging technical, analytical and problem solving skills."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/wljin/image/upload/v1605629337/personal%20website/fav_mftz1c.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
